// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CdrTabs mounted mounts tabs 1`] = `
<div
  class="cdr-tabs"
  style="height: 240px;"
>
  <div
    class="cdr-tabs__gradient-container"
  >
    <nav
      class="cdr-tabs__header-container"
    >
      <ol
        class="cdr-tabs__header"
        role="tablist"
      />
    </nav>
    <div
      class="cdr-tabs__underline"
      style="transform: translateX(0px); width: 0px;"
    />
  </div>
  <div
    class="cdr-tabs__content-container"
  />
</div>
`;

exports[`CdrTabs mounted mounts with cdr-tab-panel children 1`] = `
<div
  class="cdr-tabs"
  style="height: 240px;"
>
  <div
    class="cdr-tabs__gradient-container"
  >
    <nav
      class="cdr-tabs__header-container"
    >
      <ol
        class="cdr-tabs__header"
        role="tablist"
      >
        <li
          class="cdr-tabs__header-item"
        >
          <a
            aria-selected="true"
            class="cdr-tabs__header-item-label"
            href="#tab1"
            role="tab"
          >
            tab1
          </a>
        </li>
        <li
          class="cdr-tabs__header-item"
        >
          <a
            class="cdr-tabs__header-item-label"
            href="#tab2"
            role="tab"
          >
            tab2
          </a>
        </li>
      </ol>
    </nav>
    <div
      class="cdr-tabs__underline"
      style="transform: translateX(0px); width: 0px;"
    />
  </div>
  <div
    class="cdr-tabs__content-container"
  >
    <div
      class="cdr-tab-panel"
      id="tab1"
      name="fly"
      role="tabpanel"
      style=""
      tabindex="0"
    />
    <div
      aria-hidden="true"
      class="cdr-tab-panel"
      id="tab2"
      name="fly"
      role="tabpanel"
      style="display: none;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`CdrTabs mounted renders child tabs properly 1`] = `
<div
  class="cdr-tabs"
  style="height: 240px;"
>
  <div
    class="cdr-tabs__gradient-container"
  >
    <nav
      class="cdr-tabs__header-container"
    >
      <ol
        class="cdr-tabs__header"
        role="tablist"
      >
        <li
          class="cdr-tabs__header-item"
        >
          <a
            aria-selected="true"
            class="cdr-tabs__header-item-label"
            href="#tab1"
            role="tab"
          >
            tab1
          </a>
        </li>
        <li
          class="cdr-tabs__header-item"
        >
          <a
            class="cdr-tabs__header-item-label"
            href="#tab2"
            role="tab"
          >
            tab2
          </a>
        </li>
      </ol>
    </nav>
    <div
      class="cdr-tabs__underline"
      style="transform: translateX(0px); width: 0px;"
    />
  </div>
  <div
    class="cdr-tabs__content-container"
  >
    <div
      class="cdr-tab-panel"
      id="tab1"
      name="fly"
      role="tabpanel"
      style=""
      tabindex="0"
    />
    <div
      aria-hidden="true"
      class="cdr-tab-panel"
      id="tab2"
      name="fly"
      role="tabpanel"
      style="display: none;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`CdrTabs mounts tabs 1`] = `
<div
  class="cdr-tabs"
  style="height: 240px;"
>
  <div
    class="cdr-tabs__gradient-container"
  >
    <nav
      class="cdr-tabs__header-container"
    >
      <ol
        class="cdr-tabs__header"
        role="tablist"
      />
    </nav>
    <div
      class="cdr-tabs__underline"
      style="transform: translateX(0px); width: 0px;"
    />
  </div>
  <div
    class="cdr-tabs__content-container"
  />
</div>
`;

exports[`CdrTabs renders child tabs properly 1`] = `
<div
  class="cdr-tabs"
  style="height: 240px;"
>
  <div
    class="cdr-tabs__gradient-container"
  >
    <nav
      class="cdr-tabs__header-container"
    >
      <ol
        class="cdr-tabs__header"
        role="tablist"
      >
        <li
          class="cdr-tabs__header-item"
        >
          <a
            aria-selected="true"
            class="cdr-tabs__header-item-label"
            href="#tab1"
            role="tab"
          >
            tab1
          </a>
        </li>
        <li
          class="cdr-tabs__header-item"
        >
          <a
            class="cdr-tabs__header-item-label"
            href="#tab2"
            role="tab"
          >
            tab2
          </a>
        </li>
      </ol>
    </nav>
    <div
      class="cdr-tabs__underline"
      style="transform: translateX(0px); width: 0px;"
    />
  </div>
  <div
    class="cdr-tabs__content-container"
  >
    <div
      class="cdr-tab-panel"
      id="tab1"
      name="fly"
      role="tabpanel"
      style=""
      tabindex="0"
    />
    <div
      aria-hidden="true"
      class="cdr-tab-panel"
      id="tab2"
      name="fly"
      role="tabpanel"
      style="display: none;"
      tabindex="0"
    />
  </div>
</div>
`;
